[package]
name = "bgpq3"
version = "0.1.0-alpha.1"
authors = ["Raphael Peters <rappet@rappet.de>"]
description = "A wrapper around the bgpq3/bgpq4 binary"
documentation = "https://docs.rs/bgpq3"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rappet/rust_bgpq3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ipnetwork = "0.17.0"

[[example]]
name = "simple"